--- a/Bibliography/bib_julia2.bib
+++ b/Bibliography/bib_julia2.bib
@@ -6001,7 +6001,7 @@ author = {E. S. Kasischke and J. M Melack and M. {Craig Dobson}},
 @INPROCEEDINGS{Niharika2017,	
 	author={Niharika, E. and Adeeba, Hafsah and Krishna, A. Shiva Rama and Yugander, P.},	
 	booktitle={2017 International Conference on IoT and Application (ICIOT)}, 	
-	title={K-means based noisy SAR image segmentation using median filtering and otsu method}, 
+	title={K-means based noisy {SAR} image segmentation using median filtering and {O}tsu method}, 
 	year={2017},
 	volume={},
 	number={},
